# gemini-ai-rust

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  cache.rs  chat.rs  code_execution.rs  configure_model_parameters.rs  controlled_generation.rs  count_tokens.rs  embeddings.rs  file_chat.rs  file_data.rs  file_management.rs  function_calling.rs  google_search.rs  inline_data.rs  list_models.rs  pdf_chat.rs  pharmacy_search.rs  safety_settings.rs  stream.rs  system_instruction.rs  test.txt
examples/rest/: basic.http  cache.http  chat.http  code_execution.http  embed.http  google_search.http  safety_settings.http  system_instruction.http  tuned_model.http
src/: client.rs  error.rs  file.rs  lib.rs  main.rs
src/cache/: mod.rs
src/chat/: mod.rs
src/file/: mod.rs
src/models/: code_execution.rs  function.rs  google_search.rs  grounding_metadata.rs  info.rs  mod.rs  model_params.rs  part.rs  request.rs  request_type.rs  response.rs  safety.rs  schema.rs  stream.rs  system_instruction.rs  tool.rs
