[package]
name = "gemini-ai-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust client for the Google Gemini AI API"
license = "MIT"

[dependencies]
base64 = "0.22.1"
futures = "0.3.31"
mime_guess = "2.0"
reqwest = { version = "0.12.9", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
typed-builder = "0.20.0"

[dev-dependencies]
dotenv = "0.15"
