[package]
name = "gemini-ai-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust client for the Google Gemini AI API"
license = "MIT"

[dependencies]
base64 = "0.22.1"
futures = "0.3.30"
mime_guess = "2.0"
reqwest = { version = "0.12.9", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
typed-builder = "0.20.0"
pdf-extract = "0.7.12"
tempfile = "3.9.0"
pdf = "0.9.0"
sha2 = "0.10.8"
hex = "0.4.3"
rayon = "1.8.0"
indicatif = "0.17.7"
regex = "1.10.3"

[dev-dependencies]
dotenv = "0.15"
colored = "2.2.0"
ndarray = "0.16.1"
chrono = { version = "0.4.39", features = ["serde"] }
