[package]
name = "gemini-ai-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust client for the Google Gemini AI API"
license = "MIT"

[dependencies]
base64 = "0.22.1"
dirs = "5.0.1"
futures = "0.3.30"
mime_guess = "2.0"
reqwest = { version = "0.12.9", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
typed-builder = "0.20.0"

[dev-dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
colored = "2.2.0"
ctrlc = "3.4.5"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dotenv = "0.15"
figment = { version = "0.10", features = ["env", "json", "yaml"] }
hex = "0.4.3"
indicatif = "0.17.7"
ndarray = "0.16.1"
pdf = "0.9.0"
pdf-extract = "0.7.12"
rayon = "1.8.0"
regex = "1.10.3"
sha2 = "0.10.8"
tempfile = "3.9.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
strip = true
